<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    tools:context=".ui.DetailsFragment">

    <TextView
        android:id="@+id/tv_note_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:background="@color/app_cream"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/app_details"
        android:textSize="26sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_note_details"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp">

        <TextView
            android:id="@+id/tv_details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_details_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_details_title"
            android:layout_marginTop="32dp"
            android:text="@string/app_description"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_details_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/btn_primary"
            android:text="@string/app_edit"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_details_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:text="@string/app_back"
            android:textAllCaps="false"
            android:textSize="20sp" />
    </RelativeLayout>


</RelativeLayout>