<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    tools:context=".ui.AddItemFragment">

    <TextView
        android:id="@+id/tv_add_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:background="@color/app_cream"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/app_add_note"
        android:textSize="26sp" />

    <RelativeLayout
        android:id="@+id/rl_add_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/cl_add_colors"
        android:layout_below="@id/tv_add_details"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp">

        <EditText
            android:id="@+id/et_add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#00000000"
            android:hint="@string/app_add_title"
            android:inputType="text"
            android:padding="16dp"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_add_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_add_title"
            android:backgroundTint="#00000000"
            android:hint="@string/app_add_description"
            android:inputType="textMultiLine"
            android:padding="16dp"
            android:textSize="18sp" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_add_colors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_margin="16dp">

        <View
            android:id="@+id/view_add_green"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/view_green"
            android:contentDescription="Green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_add_item"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/view_add_blue"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_add_blue"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/view_blue"
            android:contentDescription="Blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_add_item"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/view_add_red"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/view_add_green"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_add_red"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/view_red"
            android:contentDescription="Red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_add_back"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/view_add_purple"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/view_add_blue"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_add_purple"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/view_purple"
            android:contentDescription="Purple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_add_back"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/view_add_yellow"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/view_add_red"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_add_yellow"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/view_yellow"
            android:contentDescription="Yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_add_back"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/view_add_purple"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_add_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/btn_primary"
            android:text="@string/app_add"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_add_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_add_blue" />

        <Button
            android:id="@+id/btn_add_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/material_dynamic_neutral50"
            android:text="@string/app_back"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_add_item"
            app:layout_constraintTop_toBottomOf="@id/view_add_purple" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>